# molfeat-hype

./: .authors.yml  .gitignore  .mailmap  AUTHORS.rst  CHANGELOG.rst  README.md  env.yml  index.html  mkdocs.yml  pyproject.toml  rever.xsh  versions.json
.github/workflows/: code-check.yml  release.yml  test.yml
0.0.2/: index.html
0.0.2/tutorials/: benchmark.html  getting-started.html
0.0.3/: contribute.html  index.html  usage.html
0.0.3/api/: molfeat_hype.trans.html
cache/: chatgpt.parquet
docs/: contribute.md  index.md  usage.md
docs/api/: molfeat_hype.trans.md
docs/tutorials/: benchmark.ipynb  getting-started.ipynb
main/: 404.html  contribute.html  index.html  license.html  usage.html
main/api/: molfeat_hype.trans.html
main/search/: search_index.json
main/tutorials/: benchmark.html  getting-started.html
molfeat_hype/: utils.py
molfeat_hype/trans/: llm_embeddings.py  llm_instruct_embeddings.py
molfeat_padel/: __init__.py
molfeat_padel/calc/: __init__.py  padel.py
news/: dev.rst
notebook/: getting-started.ipynb
search/: search_index.json
stable/: 404.html  contribute.html  objects.inv
stable/search/: search_index.json
stable/tutorials/: benchmark.html
tests/: test_import.py  test_llm_transformers.py  test_padel_descriptors.py
tutorials/: benchmark.html
